# Algoteren

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
backend/: alembic.ini  algoteren.db  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py
backend/algoteren_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: __init__.py  database.py  dependencies.py  main.py  models.py  payloads.py  schemas.py  security.py  services.py  settings.py
backend/app/integrations/: polygon.py
backend/app/routers/: admin.py  auth.py  content.py  submissions.py
backend/static/files/: cpp-template.txt  problem-solving-notes.txt  roadmap-summary.txt
backend/tests/: conftest.py  test_admin_crud.py  test_auth_and_seed.py  test_judge_service.py  test_runner_selection_and_local_judge.py  test_submissions_sse.py  test_supabase_polygon_security.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
server/: index.mjs  seed.mjs
src/: App.tsx  styles.css  types.ts
src/components/: AppShell.tsx  Badge.tsx  MetricCard.tsx  PolygonImporter.tsx  ProblemCard.tsx
src/data/: fallbackData.ts
src/lib/: api.ts  routing.ts
src/pages/: AuthPage.tsx  Dashboard.tsx  LeaderboardPage.tsx  ProblemPage.tsx  TheoryPage.tsx
